[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydub = "^0.25.1"
textblob = "^0.15.3"
discord = "^1.0.1"
ffmpeg = "^1.4"
opencv-python = "^4.5.1"
spacy = "^3.0.5"
ffmpeg-python = "^0.2.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
